# Qt-based-QTUpper-Computer-Software

QT_Danpianji_upper/: CMakeLists.txt  main.cpp  main_widget.cpp  main_widget.h  main_widget.ui
QT_Danpianji_upper/UDP_Connect/: DataModel.cpp  DataModel.h  UDP_Connect.cpp  UDP_Connect.h
